MG added all needed AggrMemberships

--- a/loadData/populateSoccerRDFdb.ipynb
+++ b/loadData/populateSoccerRDFdb.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,21 +474,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matheus Cunha goals\n",
-      "Matheus Cunha npg\n",
-      "Gianluca Caprari yc\n",
-      "Riccardo Saponara rc\n",
-      "Could match: 56 could not: 15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#we will use copies of row of the df, so we silence the warnings that would arise\n",
     "pd.options.mode.chained_assignment = None\n",
@@ -587,7 +575,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save the dataframe\n",
+    "stats.to_csv(\"stats\"+shortSeas+\"_IDs.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is also a different situation: the dataset contains two rows for each player who has switched league during a single season. <br>\n",
+    "We add a row representing aggregated statistics in these cases: it can be useful for query purposes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 453 ms\n",
+      "Wall time: 811 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "pd.options.mode.chained_assignment = None\n",
+    "\n",
+    "shortSeas = \"1920\"\n",
+    "stats = pd.read_csv('stats'+shortSeas+'_IDs.csv', sep=',', index_col='indCol')\n",
+    "\n",
+    "#we create a set with all the tm IDs corresponding to exactly to rows, so to the situation described above\n",
+    "toAggr = set()\n",
+    "for ind, row in stats.iterrows():\n",
+    "    if(len(stats[stats['trID'] == row['trID']]) == 2):\n",
+    "        toAggr.add(row['trID'])\n",
+    "\n",
+    "newRows = []\n",
+    "for id in toAggr:\n",
+    "    toAggrRows = stats[stats['trID'] == id]\n",
+    "    newRow = toAggrRows.iloc[0]\n",
+    "    row1 = toAggrRows.iloc[1]\n",
+    "    newRow.at['teams_played_for'] += (\",\"+row1['teams_played_for'])\n",
+    "    newRow.at['games'] += row1['games']\n",
+    "    newRow.at['minutes_played'] += row1['minutes_played']\n",
+    "    newRow.at['goals'] += row1['goals']\n",
+    "    newRow.at['npg'] += row1['npg']\n",
+    "    newRow.at['assists'] += row1['assists']\n",
+    "    newRow.at['xG'] += row1['xG']\n",
+    "    newRow.at['xA'] += row1['xA']\n",
+    "    newRow.at['npxG'] += row1['npxG']\n",
+    "    newRow.at['shots'] += row1['shots']\n",
+    "    newRow.at['key_passes'] += row1['key_passes']\n",
+    "    newRow.at['yellow_cards'] += row1['yellow_cards']\n",
+    "    newRow.at['red_cards'] += row1['red_cards']\n",
+    "    newRow.at['xGBuildup'] += row1['xGBuildup']\n",
+    "    newRow.at['xGChain'] += row1['xGChain']\n",
+    "    newRow.at['team1ID'] = row1['team0ID']    \n",
+    "    newRow.at['xG90'] *= (90/newRow.at['minutes_played'])\n",
+    "    newRow.at['xA90'] *= (90/newRow.at['minutes_played'])\n",
+    "    newRow.at['npxG90'] *= (90/newRow.at['minutes_played'])\n",
+    "    \n",
+    "    newRows.append(newRow.values)\n",
+    "\n",
+    "startInd = stats.index[len(stats) - 1] + 1\n",
+    "newStats = pd.DataFrame(newRows, columns=stats.columns, index=range(startInd,startInd+len(newRows)))\n",
+    "stats = pd.concat([stats, newStats])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,18 +830,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: total: 93.8 ms\n",
-      "Wall time: 143 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "\n",
@@ -793,19 +850,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- saving serialization ---\n",
-      "CPU times: total: 78.1 ms\n",
-      "Wall time: 83 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "# print all the data in the Turtle format\n",
@@ -894,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -927,8 +974,8 @@
      "output_type": "stream",
      "text": [
       "100% completed..\n",
-      "CPU times: total: 3.36 s\n",
-      "Wall time: 6.2 s\n"
+      "CPU times: total: 2.72 s\n",
+      "Wall time: 6.34 s\n"
      ]
     }
    ],
@@ -987,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -995,8 +1042,8 @@
      "output_type": "stream",
      "text": [
       "--- saving serialization ---\n",
-      "CPU times: total: 1.64 s\n",
-      "Wall time: 2.6 s\n"
+      "CPU times: total: 1.95 s\n",
+      "Wall time: 2.95 s\n"
      ]
     }
    ],
@@ -1010,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,21 +1084,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we finally store the statistics available for each player in a season."
+    "Here, we finally store the statistics available for each player in a season. <br>\n",
+    "If there are more rows for the same player"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Players with value: 2737 -- no value: 36\n",
-      "CPU times: total: 3.03 s\n",
-      "Wall time: 9.85 s\n"
+      "Players with value: 2789 -- no value: 36\n",
+      "CPU times: total: 2.69 s\n",
+      "Wall time: 6.59 s\n"
      ]
     }
    ],
@@ -1059,7 +1107,7 @@
     "%%time\n",
     "\n",
     "y=2019\n",
-    "shortSeas = \"1920\"\n",
+    "shortSeas = str(y-2000)+str(y-1999)\n",
     "stats = pd.read_csv('stats'+str(shortSeas)+'_IDs.csv', sep=',')\n",
     "val = pd.read_csv(path+\"/inDepthSoccerStats/player_valuations\"+shortSeas+\".csv\", sep=',', index_col='player_id')\n",
     "\n",
@@ -1122,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1130,8 +1178,8 @@
      "output_type": "stream",
      "text": [
       "--- saving serialization ---\n",
-      "CPU times: total: 1.38 s\n",
-      "Wall time: 3.77 s\n"
+      "CPU times: total: 1.69 s\n",
+      "Wall time: 4.31 s\n"
      ]
     }
    ],
