MG queries and minor fixes

--- a/loadData/populateSoccerRDFdb.ipynb
+++ b/loadData/populateSoccerRDFdb.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,18 +593,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: total: 453 ms\n",
-      "Wall time: 811 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "\n",
@@ -653,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +807,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### Teams"
    ]
@@ -881,7 +874,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### Team participations"
    ]
@@ -966,16 +961,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100% completed..\n",
-      "CPU times: total: 2.72 s\n",
-      "Wall time: 6.34 s\n"
+      "100% completed...\n",
+      "CPU times: total: 2.94 s\n",
+      "Wall time: 6.73 s\n"
      ]
     }
    ],
@@ -1017,7 +1012,7 @@
     "    if(player['country_of_citizenship'] != \"\"):\n",
     "        g.add((Footballer, DCSSO['hasCitizenship'], DCSSO[countries.loc[player['country_of_citizenship']]['Alpha-2 code']]))\n",
     "    if(player['height_in_cm'] != 0 and np.isnan(player['height_in_cm']) == False):\n",
-    "        g.add((Footballer, DCSSO['height'], Literal(player['height_in_cm'], datatype=XSD.int)))\n",
+    "        g.add((Footballer, DCSSO['height'], Literal(player['height_in_cm'], datatype=XSD.double)))\n",
     "\n",
     "    if(player['position'] != \"Missing\"):\n",
     "        subPosition = player['sub_position'].replace(\" \", \"\").replace(\"-\", \"\")\n",
@@ -1034,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1042,8 +1037,8 @@
      "output_type": "stream",
      "text": [
       "--- saving serialization ---\n",
-      "CPU times: total: 1.95 s\n",
-      "Wall time: 2.95 s\n"
+      "CPU times: total: 1.66 s\n",
+      "Wall time: 3.13 s\n"
      ]
     }
    ],
@@ -1057,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,16 +1085,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Players with value: 2789 -- no value: 36\n",
-      "CPU times: total: 2.69 s\n",
-      "Wall time: 6.59 s\n"
+      "Players with value: 2796 -- no value: 29\n",
+      "CPU times: total: 2.28 s\n",
+      "Wall time: 6.38 s\n"
      ]
     }
    ],
@@ -1170,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1178,8 +1173,8 @@
      "output_type": "stream",
      "text": [
       "--- saving serialization ---\n",
-      "CPU times: total: 1.69 s\n",
-      "Wall time: 4.31 s\n"
+      "CPU times: total: 1.06 s\n",
+      "Wall time: 4.24 s\n"
      ]
     }
    ],
